--- a/manifest.json
+++ b/manifest.json
@@ -24,5 +24,9 @@
         "jquery.min.js","axios.min.js","execute.js"
       ]
     }
-  ]
+  ],
+  "background": {
+    "persistent": true,
+    "scripts": [ "background.js"]
+  }
 }
